* Fix bug where negative regen wouldn't work if the resource was 100% full.
* Fix bug where negative regen would overflow after reaching zero.
* Fix bug that caused built-in effect types to be ignored by Power post_effect.
* Fix disappearing sprites due to render priority overflow.
* Fading of corpses is now correctly disabled when corpse_timeout=0 is used in engine/misc.txt.

Game updates:

* New formula for the 'Shield' power. Instead of Mental Damage, it is now based off a combination of player level, Mental stat, and Defense stat. This should increase its usefulness on mixed builds.
* Added 'Super' and 'Ultra' variants of Health and Mana potions. They can be obtained through the Alchemy system.
* Fixed Alchemist's Skirt so that it works with all potions.
* Prevent the player from damaging Mez before being trapped.
* Made Lezaith immune to slow/stun effects.
* Goblin Thief can now steal all available kinds of potions. Its drop table has also been expanded to make it easier to replenish lost potions.

Translation updates:

* Scottish Gaelic (gd) update (GunChleoc)
* Polish (pl) update (Pawonashi)



Flare v1.12 (https://flarerpg.org/2021/08/02/flare-1-12/)

Engine features:

* NPC interactions are now canceled when the player is attacked. 'combat_aborts_npc_interact' has been added to engine/misc.txt to control this setting.
* Added 'bar_fill_offset' and 'bar_fill_size' to MenuStatBar and MenuEnemy properties.
* Added support for fading out combat text. See the 'fade_duration' property in engine/combat.txt.
* Added 'save_oncutscene' property to engine/misc.txt. Saving before a cutscene was previously controlled with 'save_onload', which caused issues with cutscenes when set to false.
* Added 'save_anywhere' property to engine/misc.txt. This allows for saving via the pause menu. (m7600)
* Added display of enemies, allies, NPCs, and intermap teleport events to the minimap.
* Added support for defining the colors of tiles and entities on the minimap.