@@ -20,6 +20,7 @@ Engine fixes:
 * Fix bug that caused built-in effect types to be ignored by Power post_effect.
 * Fix disappearing sprites due to render priority overflow.
 * Fading of corpses is now correctly disabled when corpse_timeout=0 is used in engine/misc.txt.
+* Fix cast animation not playing when using an inventory item that is not instant.
 
 Game updates:
 
